[gd_scene load_steps=8 format=3 uid="uid://cnbhdi31nqdx6"]

[ext_resource type="Texture2D" uid="uid://bys34foupovnn" path="res://Puny-Characters/survivalgame-appletree.png" id="1_ateq8"]
[ext_resource type="Script" path="res://scripts/apple_tree.gd" id="1_xvl0i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tvfqy"]
atlas = ExtResource("1_ateq8")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo31j"]
atlas = ExtResource("1_ateq8")
region = Rect2(80, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_ggrr5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvfqy")
}],
"loop": true,
"name": &"apple_tree",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo31j")
}],
"loop": true,
"name": &"just_tree",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mndbs"]
radius = 23.0217

[sub_resource type="CircleShape2D" id="CircleShape2D_4t05e"]
radius = 7.0

[node name="apple_tree" type="Node2D"]
script = ExtResource("1_xvl0i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 2)
scale = Vector2(0.6, 0.575)
sprite_frames = SubResource("SpriteFrames_ggrr5")
animation = &"apple_tree"

[node name="collectable_place" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collectable_place"]
shape = SubResource("CircleShape2D_mndbs")

[node name="growth_time" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_4t05e")

[connection signal="body_entered" from="collectable_place" to="." method="_on_collectable_place_body_entered"]
[connection signal="body_exited" from="collectable_place" to="." method="_on_collectable_place_body_exited"]
[connection signal="timeout" from="growth_time" to="." method="_on_growth_time_timeout"]
